<resources>
    <string name="web_client_id">92310495355-ubm4g3f2eradhu2g5jeu4q3tp3hmrr9r.apps.googleusercontent.com</string>
    <string name="app_name">ArtScape</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="upload_new_art">upload new art</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Cart</string>
    <string name="notification">Notification</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="upload_art">Upload Art</string>
    <string name="splash_screen_logo">Splash Screen Logo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username">Username</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>
    <string name="transaction">Transaction</string>
    <string name="transaction_history">Transaction history</string>
    <string name="general">General</string>
    <string name="address">Address</string>
    <string name="support">Support</string>
    <string name="about_app">About App</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="select_your_user_type">Select your user type</string>
    <string name="user">User</string>
    <string name="artist">Artist</string>
    <string name="art_title">Art Title</string>
    <string name="description">Description</string>
    <string name="preview_image">Preview Image</string>
    <string name="camera">Camera</string>
    <string name="galery">galery</string>
    <string name="upload">Upload</string>
    <string name="name">Name</string>
    <string name="title_painting">Title Painting</string>
    <string name="genre">Genre</string>
    <string name="search_art_or_user">Search art or user</string>
    <string name="tabs">tabs</string>

    <string name="tab_1">Painting</string>
    <string name="tab_2">Artist</string>
    <string name="create_your_account">Create your account!</string>
    <string name="price">Price</string>
    <string name="painting_title">Painting Title</string>
    <string name="abstract_painting_dummy">Abstract Painting Dummy</string>
    <string name="double_colon">:</string>
    <string name="created_at">Created at</string>
    <string name="artist_name">Artist Name</string>
    <string name="year_dummy">1999</string>
    <string name="leornardo_da_vinci">Leornardo Da Vinci</string>
    <string name="total">Total</string>
    <string name="price_dummy">Rp 0</string>
    <string name="checkout">Checkout</string>
    <string name="painting_name_dummy">Painting Name</string>
    <string name="substract">subtract</string>
    <string name="total_painting_dummy">777</string>
    <string name="about_artist">About Artist</string>
    <string name="artist_address">Artist Address</string>
    <string name="add_comment">Comment</string>
    <string name="review">Reviews</string>
    <string name="dialog">Send your comment</string>
    <string name="dialog1">Enter your comment here</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">Send</string>
    <string name="bio">Bio</string>
    <string name="title_phone">Phone Number</string>
    <string name="title_bio">Bio</string>
    <string name="welcome">Welcome to</string>
    <string name="welcome1">Artscape</string>
    <string name="select">Select at least 3 interests.</string>
    <string name="select_title">What are you interested in?</string>





    <!--    Notification alert-->
    <string name="notif_messages">We are preparing something</string>

    <!--    About the ArtScape-->
    <string name="about_quote_title"> Art Is a Journey </string>
    <string name="about_quote_source"> - Art Inspiration </string>

    <string name="slogan">ArtScape: Exploration, from Screen to Soul</string>
    <string name="version">Versi 1.0.0</string>
    <string name="sign_in_to_continue">Sign in to continue</string>

    <string name="phone_number">Phone Number</string>
    <string name="edit">Edit</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="select_province">Select Province</string>
    <string name="select_districts">Select districts</string>
    <string name="select_regency">Select Regency</string>
    <string name="select_village">Select Village</string>
    <string name="add_user_data">Add User Data</string>
    <string name="save_data">Save Data</string>
    <string name="sign_in">Sign in with your google account</string>
    <string name="sign_in1">Sign In</string>
    <string name="button_back">button back</string>
    <string name="year_created">Year Created</string>
    <string name="painting_media">Painting Media</string>
    <string name="example_canvas_paper">example: canvas, paper</string>
    <string name="example_2003">example: 2003</string>
    <string name="there_is_no_painting">You haven\'t uploaded any paintings, please add more paintings, okay!</string>
    <string name="painting">Painting</string>
    <string name="there_is_no_paintings_matching_the_search">there is no paintings matching the search</string>
    <string name="there_is_no_artist_matching_the_search">there is no artist matching the search</string>
    <string name="edit_painting">Edit Painting</string>
    <string name="rp">Rp%1$s</string>
    <string name="modern_art">Modern art</string>
    <string name="genre_layout">Genre :</string>
    <string name="please_select_3_minimum">Please select 3 minimum</string>
    <string name="what_are_you_interested_in">What are you interested in?</string>

    <string name="phone_number_template">+62</string>
    <string name="template_62">+62%1$s</string>
    <string name="abstract_genre">Abstract</string>
    <string name="cubism">Cubism</string>
    <string name="dadaism">Dadaism</string>
    <string name="fauvism">Fauvism</string>
    <string name="impressionism">Impressionism</string>
    <string name="nouveau">Nouveau</string>
    <string name="pop">Pop</string>
    <string name="realism">Realism</string>
    <string name="renaissance">Renaissance</string>
    <string name="surrealism">Surrealism</string>
    <string name="about_artscape">About ArtScape</string>
    <string name="my_painting">My Painting</string>
    <string name="interests">Interests</string>
    <string name="made_by_group_c241_ps054">Made by group C241-PS054</string>
    <string name="artscape">ArtScape</string>

</resources>