<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.login.interest.InterestActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_genre"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_genre">

        <TextView
            android:id="@+id/tv_header"
            style="@style/semibold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/select_title"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_desc4"
            style="@style/medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_header"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/select"
            android:textSize="14sp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="402dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_desc4"
            android:layout_marginStart="16dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">


            <com.google.android.material.chip.Chip
                android:id="@+id/chip_abstract"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abstract_genre" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_cubism"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cubism" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_dadaism"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dadaism" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_fauvism"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fauvism" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_impressionism"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/impressionism" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_nouveau"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nouveau" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_pop"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pop" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_realism"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/realism" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_renaissance"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/renaissance" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_surrealism"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surrealism" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chipGroup"
            android:layout_centerHorizontal="true"
            android:layout_margin="10sp" />

    </RelativeLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_save"
        style="@style/CustomButtonStyle"
        android:layout_width="283dp"
        android:layout_height="49dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/save_data"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.875"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
