<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.painting.DetailPaintingFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/detail_painting_toolbar_layout"
        style="@style/Widget.MaterialComponents.AppBarLayout.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.appbar.MaterialToolbar

            android:id="@+id/detail_painting_toolbar"
            style="@style/ToolbarCenteredTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ToolbarDefaultIconStyle"
            app:title="Detail Painting"
            app:titleTextColor="?attr/colorOnPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_painting_toolbar_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:cardCornerRadius="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:srcCompat="@drawable/painting_dummy" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_painting_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                app:cardCornerRadius="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <TextView
                    android:id="@+id/tv_painting_title"
                    style="@style/TitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/painting_title" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_painting_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                app:cardCornerRadius="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_painting_title">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_description_title"
                        style="@style/SubtitleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"

                        android:text="@string/description"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TableLayout
                        android:id="@+id/table_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="24dp"
                        android:paddingVertical="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_description_title">

                        <TableRow>

                            <TextView
                                style="@style/DescriptionText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/artist_name" />

                            <TextView
                                style="@style/DescriptionText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="4dp"
                                android:text="@string/double_colon" />

                            <TextView
                                android:id="@+id/tv_artist"
                                style="@style/DescriptionText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="4dp"
                                android:text="@string/leornardo_da_vinci" />
                        </TableRow>

                        <TableRow>

                            <TextView
                                style="@style/DescriptionText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/genre" />

                            <TextView
                                style="@style/DescriptionText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="4dp"
                                android:text="@string/double_colon" />

                            <TextView
                                android:id="@+id/tv_genre"
                                style="@style/DescriptionText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="4dp"
                                android:text="@string/abstract_painting_dummy" />
                        </TableRow>

                        <TableRow>

                            <TextView
                                style="@style/DescriptionText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/created_at" />

                            <TextView
                                style="@style/DescriptionText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="4dp"
                                android:text="@string/double_colon" />

                            <TextView
                                android:id="@+id/tv_create_at"
                                style="@style/DescriptionText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="4dp"
                                android:text="@string/year_dummy" />
                        </TableRow>


                    </TableLayout>

                    <TextView
                        android:id="@+id/tv_description"
                        style="@style/DescriptionText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="40dp"
                        android:layout_marginHorizontal="16dp"
                        android:padding="0dp"
                        android:text="@string/lorem_ipsum"
                        app:layout_constraintTop_toBottomOf="@+id/table_layout" />
                    <View
                        android:id="@+id/view_bottom_cv"
                        android:background="@color/transparant"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_description" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>